jasn/examples/invalid/line_comment.jasn
/* Line comments are not supported in JASN (use block comments instead) */
/* JASN is whitespace-agnostic - all whitespace is interchangeable */
// invalid line comment
42
